убрал лишний код, добавил первоначальный select

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
       <section class='options'>
         <select name="movies" id="movies">
-
+          <option value="">Выберите фильм</option>
         </select>
       </section>
 
